Amélioration de la navbar.css pointer sur le menu mobile, taffer sur contact.jsx là nous avons taffer sur le backend avec l'envoi des infos du formulaire vers mon email, j'ai mis les majuscules sur mon nom de famille en home, j'ai mis le bon lien dans le data.jsx pour mon culture Bénin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "html-react-parser": "^5.2.15",
     "react": "^19.2.0",
     "react-circular-progressbar": "^2.2.0",
